infrastructure/monitoring-config/resources.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-longhorn
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            elektro.local/metrics-component: prometheus
      toPorts:
        - ports:
            - {port: '9500', protocol: TCP}
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: prometheus-platform-postgres
spec:
  endpointSelector:
    matchExpressions:
      - key: k8s:io.kubernetes.pod.namespace
        operator: In
        values: [identity, authorization]
      - key: cnpg.io/cluster
        operator: Exists
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            elektro.local/metrics-component: prometheus
      toPorts:
        - ports:
            - {port: '9187', protocol: TCP}
